<resources>
    <string name="app_name">Ambient Music Mod</string>
    <string name="permission_label">Access Ambient Music Mod</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="xda_thread">XDA Thread</string>
    <string name="github">GitHub</string>
    <string name="libraries">Third party libraries</string>
    <string name="donate">Donate</string>
    <string name="twitter">Follow me on Twitter</string>
    <string name="about_version">Version %1s\nCreated by Kieron Quinn</string>
    <string name="about_contributors">Contributors</string>
    <string name="snackbar_update">Update available</string>
    <string name="snackbar_update_button">Update</string>
    <string name="bottom_nav_now_playing">Now Playing</string>
    <string name="bottom_nav_updates">Updates</string>
    <string name="notification_channel_service_foreground_title">Background Service</string>
    <string name="notification_channel_service_foreground_subtitle">Notifications shown when Ambient Music Mod is running</string>
    <string name="notification_service_foreground_title">Ambient Music Mod</string>
    <string name="notification_service_foreground_subtitle">Running in the background, tap to hide</string>
    <string name="notification_channel_updates_title">Updates</string>
    <string name="notification_channel_updates_subtitle">Notifications shown when an update is available for the mod, app or database</string>
    <string name="notification_update_title">@string/app_name</string>
    <string name="notification_update_subtitle">An update is available, tap to view</string>
    <string name="notification_channel_errors_title">Errors</string>
    <string name="notification_channel_errors_subtitle">Notifications shown if an error occurs during background recognitions</string>
    <string name="notification_error_shizuku_title">Error connecting to Shizuku</string>
    <string name="notification_error_shizuku_subtitle">Make sure Shizuku has been started, then retry</string>
    <string name="notification_error_timeout_title">Error running recognition</string>
    <string name="notification_error_timeout_subtitle">Timed out connecting to service, please try again</string>
    <string name="notification_error_api_title">Error connecting to Now Playing</string>
    <string name="notification_error_api_subtitle">Incompatible Now Playing version installed, please update from the Updates page</string>
    <string name="notification_error_needs_root_title">Error starting recognition</string>
    <string name="notification_error_needs_root_subtitle">Root is required to run recognition on this device, please read the FAQ</string>
    <string name="notification_error_button">Retry</string>
    <string name="notification_channel_warnings_title">Warnings</string>
    <string name="notification_channel_warnings_subtitle">Notifications shown if compatibility issues arise</string>
    <string name="notification_warning_on_demand_disabled_title">On Demand Disabled</string>
    <string name="notification_warning_on_demand_disabled_subtitle">On Demand is no longer available on this device. Tap to fix.</string>
    <string name="notification_channel_backups_title">Backups</string>
    <string name="notification_channel_backups_subtitle">Notifications shown during periodic backups</string>
    <string name="nowplaying_title">Now Playing</string>
    <string name="now_playing_error_shizuku">Failed to connect to Shizuku</string>
    <string name="now_playing_error_shizuku_subtitle">Make sure it has been started and try again</string>
    <string name="now_playing_error_api">Now Playing Error</string>
    <string name="now_playing_error_api_subtitle">Either Now Playing has been uninstalled or the version is not compatible with this version of Ambient Music Mod, please install/update it from the Updates page</string>
    <string name="now_playing_error_generic">An Error Occurred</string>
    <string name="now_playing_error_generic_subtitle">Please restart Ambient Music Mod and try again</string>
    <string name="item_nowplaying_header_preview">Song • Artist</string>
    <string name="item_nowplaying_header_switch">Identify songs playing nearby</string>
    <string name="item_nowplaying_notifications_title">Notifications</string>
    <string name="item_nowplaying_notifications_content_enabled">On</string>
    <string name="item_nowplaying_notifications_content_disabled">Off</string>
    <string name="item_nowplaying_lockscreen_title">Lock Screen &amp; Widget</string>
    <string name="item_nowplaying_lockscreen_content">Display identified songs on your lock screen</string>
    <string name="item_nowplaying_ondemand_title">On Demand Recognition</string>
    <string name="item_nowplaying_ondemand_content">Identify songs playing nearby that aren\'t recognised by your device</string>
    <string name="item_nowplaying_history_title">Now Playing History</string>
    <string name="item_nowplaying_history_content">%1s by %1s • %1s</string>
    <string name="item_nowplaying_history_content_empty">No recognitions yet</string>
    <string name="item_nowplaying_settings_title">Settings</string>
    <string name="item_nowplaying_settings_content">Modify Now Playing options including how often recognition runs</string>
    <string name="banner_message_settings_button">Settings</string>
    <string name="banner_message_permissions_needed_title">Permissions needed</string>
    <string name="banner_message_permissions_needed_content">Now Playing requires Microphone and Phone access to recognise music and know when a call is in progress</string>
    <string name="banner_message_permissions_needed_button">Grant Permissions</string>
    <string name="banner_message_downloading_title">Downloading song database</string>
    <string name="banner_message_downloading_content">Now Playing will start recognising music soon</string>
    <string name="banner_message_no_internet_title">Connect to Wi-Fi</string>
    <string name="banner_message_no_internet_content">No internet</string>
    <string name="banner_message_waiting_for_unmetered_internet_title">Connect to Wi-Fi</string>
    <string name="banner_message_waiting_for_unmetered_internet_content">Waiting for unmetered Wi-Fi</string>
    <string name="banner_message_search_button_being_set_up_title">The search button is being set up</string>
    <string name="banner_message_search_button_being_set_up_content">It will be available soon</string>
    <string name="banner_message_dnd_title">Do not disturb is on</string>
    <string name="banner_message_dnd_content">Song recognition notifications may not be shown</string>
    <string name="banner_message_app_using_device_audio_content">Songs aren\'t identified while device audio is being used by other apps</string>
    <string name="banner_message_app_using_device_audio_title">An app is using device audio</string>
    <string name="banner_message_app_recording_audio_content">Songs aren\'t identified while device audio is being used by other apps</string>
    <string name="banner_message_app_recording_audio_title">An app is recording audio</string>
    <string name="banner_message_google_app_invalid_title">Google App unsupported for On Demand</string>
    <string name="banner_message_google_app_invalid_content">The version of the Google App installed on your device does not support On Demand. Read the FAQ for info on how to fix this.</string>
    <string name="banner_message_microphone_disabled_title">The microphone is disabled</string>
    <string name="banner_message_microphone_disabled_content">Ambient recognitions are paused</string>
    <string name="banner_message_battery_optimisations_title">Battery Optimisations</string>
    <string name="banner_message_battery_optimisations_content">Battery Optimisations are enabled for Ambient Music Mod, this will impact recognitions</string>
    <string name="banner_message_battery_optimisations_button">Disable</string>
    <string name="footer_nowplaying">Now Playing recognises music using a song database stored on your phone. To protect your privacy, the automatic recognition process never sends audio or background conversations to Google. Now Playing uses privacy-preserving analytics.\n\nIf you turn on \"On Demand\", each time you tap to search Google receives a short, digital audio fingerprint to identify what\'s playing.\n\nBecause Now Playing is run through a privileged System Service (via Shizuku), it does not show a mic indicator and will not appear on your Privacy dashboard.</string>
    <string name="footer_nowplaying_learn_more">Learn more</string>
    <string name="fab_nowplaying_recognise">Recognise</string>
    <string name="recognition_source_picker_nnfp">On Device</string>
    <string name="recognition_source_picker_nnfp_content">Runs on device, no internet connection required. May not recognise all songs.</string>
    <string name="recognition_source_picker_on_demand">Online</string>
    <string name="recognition_source_picker_online_content">Backed by Google Assistant, recognises most songs but requires an internet connection.</string>
    <string name="recognition_success_title">Song Recognised</string>
    <string name="recognition_success_content">%1s by %1s</string>
    <string name="recognition_success_playback">Playback</string>
    <string name="recognition_failed_button">Retry</string>
    <string name="recognition_failed_reason_no_match">No Track Matched</string>
    <string name="recognition_failed_reason_skipped">Recognition Skipped</string>
    <string name="recognition_failed_reason_generic">Recognition Failed</string>
    <string name="recognition_failed_reason_content_no_match">Please try again</string>
    <string name="recognition_failed_reason_content_on_call">Device is being used for a call</string>
    <string name="recognition_failed_reason_content_system_user">Recognition only works as the primary user</string>
    <string name="recognition_failed_reason_content_music_playing">Music is playing</string>
    <string name="recognition_failed_reason_content_audio_record_failed">Failed to record audio, please try again</string>
    <string name="on_demand_title">On Demand</string>
    <string name="lockscreen_title">Lock Screen</string>
    <string name="lockscreen_owner_info_title">Owner Info</string>
    <string name="lockscreen_overlay_text_colour_title">Overlay / Minimal Widget Text Colour</string>
    <string name="lockscreen_overlay_text_colour_custom_title_long">Custom colour</string>
    <string name="lockscreen_overlay_on_clicked_title">Tap Action</string>
    <string name="settings_title">Settings</string>
    <string name="title_settings_recognition_period">Recognition Period</string>
    <string name="title_settings_recognition_buffer">Recognition Buffer</string>
    <string name="settings_advanced">Advanced</string>
    <string name="title_settings_bedtime">Bedtime</string>
    <string name="updates_version">Version: %1s</string>
    <string name="updates_update">Update</string>
    <string name="updates_status_up_to_date">Up to Date</string>
    <string name="updates_amm_title">Ambient Music Mod</string>
    <string name="updates_pam_title">Now Playing</string>
    <string name="setup_shizuku_title">Shizuku</string>
    <string name="setup_data_usage_title">Data Usage</string>
    <string name="setup_country_picker_title">Select a Country</string>
    <string name="setup_install_pam_title">Now Playing</string>
    <string name="setup_permissions_title">Permissions</string>
    <string name="backup_restore_title">Backup &amp; Restore</string>
    <string name="backup_restore_restore_options_title">Restore Options</string>
    <string name="restore_title">Restore</string>
    <string name="faq_title">Frequently Asked Questions</string>
    <string name="faq_title_short">FAQ</string>
    <string name="battery_optimisation_title">Battery Optimisation</string>
</resources>