<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_16"
    android:background="@drawable/background_updates_item"
    android:padding="@dimen/margin_16">

    <TextView
        android:id="@+id/updates_pam_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updates_pam_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.AmbientMusicMod"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updates_pam_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.AmbientMusicMod.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updates_pam_title"
        tools:text="@string/updates_status_up_to_date" />

    <TextView
        android:id="@+id/updates_pam_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updates_version"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.AmbientMusicMod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updates_pam_status" />

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:padding="4dp"
        android:alpha="0.5"
        android:id="@+id/updates_pam_icon"
        android:src="@drawable/ic_ambient_music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updates_pam_update"
        style="@style/Widget.Material3.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/updates_update"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.AmbientMusicMod.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updates_pam_version" />

</androidx.constraintlayout.widget.ConstraintLayout>